--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url('./adorable.jpg');
+    background: url('img/adorable.jpg');
     background-size: cover;
     color: white;
     font-family: 'Lato', sans-serif;
